--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <link rel="stylesheet" type="text/css" href="solution.css">
+  <link rel="stylesheet" href="solution.css">
   <script type="text/javascript" src="solution.js"></script>
 
   <meta charset="UTF-8">
